# mlops-from-scratch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/: commit.md
.claude/skills/commit/: SKILL.md
.claude/skills/session-end/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml  load-test.yml
src/: __init__.py
tests/: __init__.py  test_sample.py
tests/load/: locustfile.py
